// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`" 2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 5,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"1  + (cancel) or 1" should error 1`] = `"\\"...+ (ca...\\" at position 3 is invalid"`;

exports[`"1 (" should error 1`] = `"expected more text at position 3"`;

exports[`"1 (asdf)" should error 1`] = `"\\"...asdf)...\\" at position 3 is invalid"`;

exports[`"1 or 4, 2" parses correctly 1`] = `
Object {
  "data": null,
  "index": 9,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "4",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": false,
      "type": "alt command",
    },
  ],
}
`;

exports[`"1+2" should compile to props correctly 1`] = `
Array [
  Object {
    "type": "image",
    "val": "1plus2",
  },
]
`;

exports[`"1+3 (cancel) or 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 17,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "3",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": "cancel",
      },
      "first": true,
      "type": "alt command",
    },
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": false,
      "type": "alt command",
    },
  ],
}
`;

exports[`"1+3 (cancel)" parses correctly 1`] = `
Object {
  "data": null,
  "index": 12,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "3",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": "cancel",
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"1+3, when hit 2+1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 17,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "3",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": Object {
                "type": "prefix condition",
                "val": "when hit",
              },
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"1+4, asdf" should error 1`] = `"\\"..., asd...\\" at position 3 is invalid"`;

exports[`"1+5" should error 1`] = `"\\"...+5...\\" at position 1 is invalid"`;

exports[`"1+5, asdf" should error 1`] = `"\\"...+5, a...\\" at position 1 is invalid"`;

exports[`"1, 3 in rage" should error 1`] = `"\\"..., 3 i...\\" at position 1 is invalid"`;

exports[`"4+" should error 1`] = `"\\"...+...\\" at position 1 is invalid"`;

exports[`"4~, 2" should error 1`] = `"\\"...~, 2...\\" at position 1 is invalid"`;

exports[`"DMN jump rage 2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 18,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
          Object {
            "type": "other condition",
            "val": "jump",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"DMN jump rage U/B+2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 22,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "U/B",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
          Object {
            "type": "other condition",
            "val": "jump",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"DMN jump rage u/b+2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 22,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "u/b",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
          Object {
            "type": "other condition",
            "val": "jump",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"adf 1, 3 in rage" should error 1`] = `"\\"...adf 1...\\" at position 0 is invalid"`;

exports[`"dmn in rage 2+4, 1~4+3, 1 or 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 30,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "4",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": "~",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "4",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "3",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": false,
      "type": "alt command",
    },
  ],
}
`;

exports[`"dmn in rage 2, 1+4 asdf or 1" should error 1`] = `"\\"..., 1+4...\\" at position 13 is invalid"`;

exports[`"dmn in rage 2, 1+4 or 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 23,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
                Object {
                  "type": "operator",
                  "val": "+",
                },
                Object {
                  "type": "atom",
                  "val": "4",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": false,
      "type": "alt command",
    },
  ],
}
`;

exports[`"dmn in rage 2,, 1+4 or 1" should error 1`] = `"\\"...,, 1+...\\" at position 13 is invalid"`;

exports[`"in rage " should error 1`] = `"expected more text at position 8"`;

exports[`"in rage DMN 2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 16,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "other condition",
            "val": "rage",
          },
          Object {
            "type": "stance condition",
            "val": "dmn",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"jump 2, 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 9,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "other condition",
            "val": "jump",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
  ],
}
`;

exports[`"jump in rage 1+2* or when hit F+f+d/f+4, 2 (close)" should compile to props correctly 1`] = `
Array [
  Object {
    "type": "text",
    "val": "jump",
  },
  Object {
    "type": "text",
    "val": "rage",
  },
  Object {
    "type": "image",
    "val": "1plus2",
  },
  Object {
    "type": "image",
    "val": "neutral",
  },
  Object {
    "type": "alt command operator",
    "val": "or",
  },
  Object {
    "type": "text",
    "val": "when hit",
  },
  Object {
    "type": "image",
    "val": "F-hold",
  },
  Object {
    "type": "image",
    "val": "f",
  },
  Object {
    "type": "image",
    "val": "df",
  },
  Object {
    "type": "image",
    "val": "4",
  },
  Object {
    "type": "image",
    "val": "comma",
  },
  Object {
    "type": "image",
    "val": "2",
  },
  Object {
    "type": "text with parens",
    "val": "close",
  },
]
`;

exports[`"rss in rage 2, 1 or 1" parses correctly 1`] = `
Object {
  "data": null,
  "index": 21,
  "isError": false,
  "result": Array [
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "2",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
          Object {
            "type": "operator",
            "val": ",",
          },
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [
          Object {
            "type": "stance condition",
            "val": "rss",
          },
          Object {
            "type": "other condition",
            "val": "rage",
          },
        ],
        "suffix condition": null,
      },
      "first": true,
      "type": "alt command",
    },
    Object {
      "body": Object {
        "input molecules": Array [
          Object {
            "type": "molecule",
            "val": Object {
              "body": Array [
                Object {
                  "type": "atom",
                  "val": "1",
                },
              ],
              "prefix condition": null,
              "suffix condition": null,
            },
          },
        ],
        "prefix conditions": Array [],
        "suffix condition": null,
      },
      "first": false,
      "type": "alt command",
    },
  ],
}
`;

exports[`"rssin rage 2, 1 or 1" should error 1`] = `"\\"...rssin...\\" at position 0 is invalid"`;
